validator_derive_tests/tests/compile-fail/must_match/field_type_doesnt_match.stderr
error: Invalid argument for `must_match` validator of field `password`: types of field can't match
 --> $DIR/field_type_doesnt_match.rs:5:5
  |
5 |     #[validate(must_match = "password2")]
  |     ^
